# webterm

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/: dependabot.yml
src/: event.rs  lib.rs  main.rs  server.rs  templates.rs  terminado.rs
static/: term.html
templates/: term.html
tests/: browser.test.js
