[package]
name = "webterm"
description = "xterm.js - based webterminal"
repository = "https://github.com/fubarnetes/webterm"
documentation = "https://docs.rs/webterm"
readme = "README.md"
categories = ["web-programming", "web-programming::websocket", "web-programming::http-server", "command-line-utilities"]
keywords = ["terminal", "xterm", "websocket", "terminus", "console"]
version = "0.1.0"
authors = ["fabian.freyer@physik.tu-berlin.de"]
edition = "2018"
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "fubarnetes/webterm", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
actix-web= "0.7.19"
actix= "0.7.9"
askama = { version = "0.8.0", features= ["with-actix-web"] }
futures = "0.1.28"
lazy_static = "1.3.0"
libc = "0.2.61"
log = "0.4.8"
pretty_env_logger = "0.3.0"
serde = "1.0.98"
serde_json = "1.0.40"
structopt = "0.2.18"
tokio = "0.1.22"
tokio-codec= "0.1.1"
tokio-io= "0.1.12"
tokio-pty-process = "0.4"

[lib]
name = "webterm"
path = "src/lib.rs"

[[bin]]
name = "webterm-server"
path = "src/server.rs"
