[package]
name = "webterm"
description = "xterm.js - based webterminal"
repository = "https://github.com/fubarnetes/webterm"
documentation = "https://docs.rs/webterm"
readme = "README.md"
categories = ["web-programming", "web-programming::websocket", "web-programming::http-server", "command-line-utilities"]
keywords = ["terminal", "xterm", "websocket", "terminus", "console"]
version = "0.2.0"
authors = ["fabian.freyer@physik.tu-berlin.de"]
edition = "2018"
license = "BSD-3-Clause"

[badges]
travis-ci = { repository = "fubarnetes/webterm", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
actix-files = "0.1.6"
actix-service = "0.4.2"
actix-web-actors = "1.0.2"
actix-web= "1.0.8"
actix= "0.8.3"
futures = "0.1.29"
handlebars = "2.0.2"
lazy_static = "1.4.0"
libc = "0.2.66"
log = "0.4.8"
pretty_env_logger = "0.3.1"
serde = "1.0.104"
serde_json = "1.0.44"
structopt = "0.3.7"
tokio = "0.1.22"
tokio-codec= "0.1.1"
tokio-io= "0.1.12"
tokio-pty-process = "0.4"

[lib]
name = "webterm"
path = "src/lib.rs"

[[bin]]
name = "webterm-server"
path = "src/server.rs"
